--- a/styles/standard.css
+++ b/styles/standard.css
@@ -1,4 +1,13 @@
 body {
     background-color: rgb(4,23,33) !important;
     color: white !important;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    max-width: 1920px;
+}
+
+header{
+    width: -webkit-fill-available;
 }
