--- a/style.css
+++ b/style.css
@@ -21,4 +21,24 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    background-color: rgb(8, 50, 64) !important;
+}
+
+.card {
+    color: white !important;
+}
+
+.text-body-secondary {
+    --bs-secondary-color: white;
+}
+
+.card-body {
+    padding: 0 !important;
+}
+
+.card-footer {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: rgb(8, 50, 64) !important;
 }
