--- a/styles/standard.css
+++ b/styles/standard.css
@@ -1,10 +1,10 @@
 body {
     background-color: rgb(4,23,33) !important;
     color: white !important;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    display: flex !important;
+    flex-direction: column !important;
+    align-items: center !important;
+    justify-content: center !important;
     max-width: 1920px;
 }
 
