--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@
     align-items: center;
     flex-wrap: wrap;
     gap: 0.75rem;
+    height: 95dvh;
+    max-width: 1920px;
 }
 .flex {
     display: flex;
