--- a/styles/standard.css
+++ b/styles/standard.css
@@ -5,7 +5,7 @@ body {
     flex-direction: column !important;
     align-items: center !important;
     justify-content: center !important;
-    max-width: 1920px;
+    margin: auto !important;
 }
 
 header{
