--- a/style.css
+++ b/style.css
@@ -1,11 +1,18 @@
+
+.main-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    max-width: 1920px;
+}
 .content {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
     gap: 0.75rem;
-    height: 95dvh;
-    max-width: 1920px;
 }
 .flex {
     display: flex;
