--- a/styles/standard.css
+++ b/styles/standard.css
@@ -4,7 +4,7 @@ body {
     display: flex !important;
     flex-direction: column !important;
     align-items: center !important;
-    justify-content: center !important;
+    justify-content: space-between !important;
     margin: auto !important;
 }
 
