--- a/styles/types.css
+++ b/styles/types.css
@@ -56,6 +56,7 @@
     background-image: url("../assets/img/pokeball_bgr.png");
     background-repeat: no-repeat;
     background-size: cover;
+    background-blend-mode: difference;
 }
 .pokemon-img{
     filter: drop-shadow(0px 0px 40px rgba(0, 0, 0, 0.35));;
