--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -1,41 +1,47 @@
 .bg-navbar {
-    background-color: rgb(6, 36, 46);
+  background-color: rgb(6, 36, 46);
 }
-.bg-navbar .navbar-brand, 
-.bg-navbar .form-control, 
+.bg-navbar .navbar-brand,
+.bg-navbar .form-control,
 .bg-navbar .btn {
-    color: white;
+  color: white;
 }
 .bg-navbar .form-control::placeholder {
-    color: rgba(0, 0, 0, 0.7);
+  color: rgba(0, 0, 0, 0.7);
 }
 .bg-navbar .btn {
-    border-color: white;
+  border-color: white;
 }
 .bg-navbar .btn:hover {
-    /* background-color: white; */
-    color: rgba(250, 250, 250, 0.75);
+  color: rgba(250, 250, 250, 0.75);
 }
 .navbar-brand img {
-    margin-right: 8px;
+  margin-right: 8px;
 }
 .form-control {
-    max-width: 300px;
-    font-weight: bold;
-    width: 100rem !important;
-    height: 5rem;
+  max-width: 300px;
+  font-weight: bold;
+  width: 100rem !important;
+  height: 5rem;
 }
 .navbar-brand:hover {
-    color: rgba(200, 200, 200, 0.75) !important;
+  color: rgba(200, 200, 200, 0.75) !important;
 }
-nav{
-    margin-bottom: 20px;
+nav {
+  margin-bottom: 20px;
 }
 .navbar {
-    height: min-content;
+  height: min-content;
 }
 .logo {
-    width: 140px;
-    height: 120px;
-    padding-left: 32px;
+  width: 140px;
+  height: 120px;
+  padding-left: 32px;
+}
+#pokemon-search {
+  margin: 20px;
+  padding: 10px;
+  width: 300px !important;
+  font-size: 16px;
+  color: black !important;
 }
