--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@
 
 .card {
     color: white !important;
+    width: 24rem;
 }
 
 .text-body-secondary {
@@ -56,4 +57,21 @@
     width: 80px;
     height: 80px;
     border-radius: 1rem;
+}
+
+@media (max-width: 1920px) {
+
+}
+
+@media (max-width: 1024px) {
+
+}
+
+@media (max-width: 800px) {
+    .card {
+        width: 16rem;
+    }
+}
+@media (max-width: 600px) {
+
 }
