--- a/styles/loading-spinner.css
+++ b/styles/loading-spinner.css
@@ -2,7 +2,7 @@
   0% {
     transform: rotate(0deg);
   }
-  25% {
+  /* 25% {
     transform: rotate(90deg);
   }
   50% {
@@ -10,15 +10,17 @@
   }
   75% {
     transform: rotate(270deg);
-  }
+  } */
   100% {
     transform: rotate(360deg);
   }
 }
 
 .spinner {
-  animation: spin 1.5s linear infinite;
+  animation: spin 1.5s ease-in-out infinite;
   width: 250px;
+  height: 250px;
+  transform-origin: center center;
 }
 
 #loading-overlay {
