--- a/styles/modal.css
+++ b/styles/modal.css
@@ -23,3 +23,33 @@
 .progress {
     width: 200px;
 }
+
+@keyframes flipIn {
+    from {
+      transform: rotateY(-90deg);
+      opacity: 0;
+    }
+    to {
+      transform: rotateY(0);
+      opacity: 1;
+    }
+  }
+  
+  @keyframes flipOut {
+    from {
+      transform: rotateY(0);
+      opacity: 1;
+    }
+    to {
+      transform: rotateY(90deg);
+      opacity: 0;
+    }
+  }
+  
+  .modal.flip-in {
+    animation: flipIn 0.5s forwards;
+  }
+  
+  .modal.flip-out {
+    animation: flipOut 0.5s backwards;
+  }
