--- a/style.css
+++ b/style.css
@@ -33,9 +33,13 @@
     background-color: rgb(8, 50, 64) !important;
 }
 
+h3,h5 {
+    font-size: 2.5rem !important;
+}
+
 .card {
     color: white !important;
-    width: 24rem;
+    width: 26rem;
 }
 
 .card:hover {
