--- a/styles/footer.css
+++ b/styles/footer.css
@@ -11,6 +11,6 @@ footer {
     max-width: 1920px;
     width: -webkit-fill-available;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
 }
