--- a/style.css
+++ b/style.css
@@ -90,17 +90,33 @@ h1 {
     height: 96px;
 }
 
-@media (max-width: 1920px) {
+@media (max-width: 1440px) {
+    .card {
+        width: 22rem;
+    }
 
+    h3, h5 {
+        font-size: 2rem !important;
+    }
 }
 
 @media (max-width: 1024px) {
+    .card {
+        width: 20rem;
+    }
 
+    h3, h5 {
+        font-size: 1.5rem !important;
+    }
 }
 
 @media (max-width: 800px) {
     .card {
         width: 16rem;
+    }
+
+    h3, h5 {
+        font-size: 1rem !important;
     }
 }
 @media (max-width: 600px) {
