--- a/styles/footer.css
+++ b/styles/footer.css
@@ -20,3 +20,17 @@ footer {
         justify-content: space-evenly;
     }
 }
+
+@media (max-width: 1024px) {
+    .footer-content {
+        font-size: x-small;
+    }
+}
+
+@media (max-width: 700px) {
+    .footer-content {
+        font-size: xx-small;
+        flex-wrap: wrap;
+        text-align: center;
+    }
+}
