--- a/styles/loading-spinner.css
+++ b/styles/loading-spinner.css
@@ -30,9 +30,37 @@
   width: 100vw;
   height: 100vh;
   display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: column;
+  background-color: rgba(135, 135, 135, 0.85);
+  z-index: 1060;
+  backdrop-filter: blur(5px);
+}
+
+.loading-spinner {
+  position: relative;
+}
+
+.progress-bar {
+  width: 50%;
+  height: 10px;
+  background-color: #e0e0e0;
+  border-radius: 5px;
+  overflow: hidden;
+  margin-top: 10px;
+}
+
+.progress-bar-fill {
+  height: 100%;
+  width: 0;
+  background-color: rgb(6, 36, 46);
+  transition: width 0.3s;
+}
+
+.loading-screen {
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: rgba(135, 135, 135, 0.85);
-  z-index: 5;
-  backdrop-filter: blur(5px);
 }
