responsive loading spinner implemented

--- a/styles/loading-spinner.css
+++ b/styles/loading-spinner.css
@@ -23,6 +23,10 @@
   transform-origin: center center;
 }
 
+.spinner img {
+  width: -webkit-fill-available;
+}
+
 #loading-overlay {
   position: fixed;
   top: 0;
