--- a/styles/footer.css
+++ b/styles/footer.css
@@ -5,6 +5,8 @@ footer {
     display: flex;
     align-items: center;
     justify-content: center;
+    position: fixed;
+    bottom: 0;
 }
 
 .footer-content {
