--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -15,6 +15,11 @@
 .bg-navbar .btn:hover {
   color: rgba(250, 250, 250, 0.75);
 }
+.navbar-brand {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
 .navbar-brand img {
   margin-right: 8px;
 }
@@ -44,59 +49,63 @@ nav {
   margin: 20px;
   padding: 10px;
   width: 50rem !important;
-  font-size: 36px;
+  font-size: 45px;
   color: black !important;
+  height: 10rem;
 }
 
 @media (max-width: 1920px) {
     .logo {
-        width: 180px;
-        height: 160px;
+        width: 160px;
+        height: 120px;
     }
     .logo-text {
-        width: 480px;
+        width: 400px;
     }
     #pokemon-search {
-        width: 25rem !important;
+        width: 32rem !important;
         font-size: 30px;
+        height: 7rem;
     }
 }
 
 @media (max-width: 1440px) {
     .logo {
-        width: 150px;
-        height: 120px;
+        width: 140px;
+        height: 100px;
     }
     .logo-text {
-        width: 360px;
+        width: 320px;
     }
     #pokemon-search {
-        width: 15rem !important;
+        width: 20rem !important;
         font-size: 16px;
+        height: 6rem;
     }
 }
 
 @media (max-width: 1024px) {
     .logo {
-        width: 130px;
-        height: 90px;
+        width: 120px;
+        height: 80px;
     }
     .logo-text {
         width: 240px;
     }
     #pokemon-search {
         width: 15rem !important;
+        height: 4rem;
     }
 }
 
 @media (max-width: 800px) {
     .logo {
-        width: 80px;
-        height: 60px;
+        width: 60px;
+        height: 40px;
         padding-left: 8px;
     }
     .logo-text {
-        width: 240px;
+        width: 180px;
     }
     #pokemon-search {
         margin: 0;
@@ -107,12 +116,12 @@ nav {
 }
 @media (max-width: 600px) {
     .logo {
-        width: 60px;
-        height: 40px;
+        width: 40px;
+        height: 30px;
 
     }
     .logo-text {
-        width: 140px;
+        width: 120px;
     }
     #pokemon-search {
         width: 9.9rem !important;
