--- a/styles/assets.css
+++ b/styles/assets.css
@@ -25,7 +25,7 @@ th, td {
 
 @media (max-width: 768px) {
     .btn {
-        font-size: 2rem !important;
+        font-size: 1.2rem !important;
     } 
 }
 
@@ -34,6 +34,6 @@ th, td {
         width: 75% !important;
     }
     .btn {
-        font-size: 1rem !important;
+        font-size: .75rem !important;
     }
 }
