--- a/styles/modal.css
+++ b/styles/modal.css
@@ -83,7 +83,7 @@ button.disabled:hover {
   cursor: not-allowed;
 }
 
-@media (min-width: 1921px) {
+@media (min-width: 2560px) {
   .modal-footer {
     font-size: 3rem;
   }
@@ -105,7 +105,7 @@ button.disabled:hover {
   }
 }
 
-@media (max-width: 1920px) {
+@media (max-width: 2559px) {
   .modal-footer {
     font-size: 2rem;
   }
@@ -120,25 +120,52 @@ button.disabled:hover {
   }
 }
 
-@media (max-width: 1440px) {
+@media (max-width: 1920px) {
+  .modal-title {
+    font-size: 2.5rem !important;
+  }
   .modal-footer {
-    font-size: 1.25rem;
+    font-size: 1.5rem;
   }
   .modal-types {
-    font-size: 1.25rem;
+    font-size: 1.5rem;
+  }
+  .modal-body img {
+    width: 300px;
+  }
+  #evolution-chain img {
+    width: 200px;
+  }
+}
+
+@media (max-width: 1440px) {
+  .modal-title {
+    font-size: 2rem !important;
+  }
+  .modal-footer {
+    font-size: 1rem;
+  }
+  .modal-types {
+    font-size: 1rem;
   }
   .modal-title {
     font-size: 2rem !important;
   }
   .modal-body img {
-    width: 250px;
+    width: 200px;
   }
   #evolution-chain img {
     width: 150px;
   }
+  .modal-lg {
+    --bs-modal-width: 600px !important;
+  }
 }
 
 @media (max-width: 1024px) {
+  .modal-title {
+    font-size: 1.5rem !important;
+  }
   .modal-footer {
     font-size: 1rem;
   }
@@ -146,14 +173,20 @@ button.disabled:hover {
     font-size: 1rem;
   }
   .modal-body img {
-    width: 250px;
+    width: 150px;
   }
   #evolution-chain img {
     width: 120px;
   }
+  .modal-lg {
+    --bs-modal-width: 500px !important;
+  }
 }
 
 @media (max-width: 768px) {
+  .modal-title {
+    font-size: 1rem !important;
+  }
   .modal-footer {
     font-size: .75rem;
   }
@@ -161,7 +194,7 @@ button.disabled:hover {
     font-size: .75rem;
   }
   .modal-body img {
-    width: 200px;
+    width: 150px;
   }
   #evolution-chain img {
     width: 120px;
@@ -169,6 +202,9 @@ button.disabled:hover {
 }
 
 @media (max-width: 425px) {
+  .modal-title {
+    font-size: .75rem !important;
+  }
   .modal-footer {
     font-size: .6rem;
   }
@@ -176,7 +212,7 @@ button.disabled:hover {
     font-size: .6rem;
   }
   .modal-body img {
-    width: 150px;
+    width: 120px;
   }
   #evolution-chain img {
     width: 75px;
