--- a/styles/modal.css
+++ b/styles/modal.css
@@ -122,37 +122,34 @@ button.disabled:hover {
 
 @media (max-width: 1920px) {
   .modal-title {
-    font-size: 2.5rem !important;
+    font-size: 2rem !important;
   }
   .modal-footer {
-    font-size: 1.5rem;
+    font-size: 1.25rem;
   }
   .modal-types {
-    font-size: 1.5rem;
+    font-size: 1.25rem;
   }
   .modal-body img {
-    width: 300px;
+    width: 225px;
   }
   #evolution-chain img {
-    width: 200px;
+    width: 175px;
   }
 }
 
 @media (max-width: 1440px) {
   .modal-title {
-    font-size: 2rem !important;
+    font-size: 1.75rem !important;
   }
   .modal-footer {
-    font-size: 1rem;
+    font-size: .9rem;
   }
   .modal-types {
-    font-size: 1rem;
-  }
-  .modal-title {
-    font-size: 2rem !important;
+    font-size: .9rem;
   }
   .modal-body img {
-    width: 200px;
+    width: 175px;
   }
   #evolution-chain img {
     width: 150px;
@@ -164,13 +161,13 @@ button.disabled:hover {
 
 @media (max-width: 1024px) {
   .modal-title {
-    font-size: 1.5rem !important;
+    font-size: 1.3rem !important;
   }
   .modal-footer {
-    font-size: 1rem;
+    font-size: .8rem;
   }
   .modal-types {
-    font-size: 1rem;
+    font-size: .8rem;
   }
   .modal-body img {
     width: 150px;
